node-main/deps/v8/test/message/fail/call-let.out
*%(basename)s:6: TypeError: let is not a function
  let()
  ^
TypeError: let is not a function
    at f (*%(basename)s:6:3)
    at *%(basename)s:8:1
